--- a/podcastPlayer/Podfile
+++ b/podcastPlayer/Podfile
@@ -6,7 +6,14 @@ target 'podcastPlayer' do
  
   pod 'FeedKit', '9.1.2'
   pod 'Kingfisher' , '7.12.0'
-  pod 'KingfisherWebP'
+  pod 'KingfisherWebP', '1.6.0'
 
 end
 
+post_install do |installer|
+ installer.pods_project.targets.each do |target|
+  target.build_configurations.each do |config|
+   config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+  end
+ end
+end
